<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2016 Payworks GmbH (http://www.payworks.com)
  ~
  ~ The MIT License (MIT)
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in
  ~ all copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
  ~ THE SOFTWARE.
  -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-1dp"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:id="@+id/mpu_summary_receipt_card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/mpu_card_view_negative_margin"
            android:layout_marginRight="@dimen/mpu_card_view_negative_margin"
            android:layout_marginTop="@dimen/mpu_card_view_negative_margin"
            card_view:cardCornerRadius="0dp"
            card_view:cardPreventCornerOverlap="false"
            card_view:cardUseCompatPadding="false">

            <LinearLayout
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/mpu_summary_header_container_view"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/mpu_transaction_state_approved"
                    android:orientation="vertical"
                    android:paddingBottom="@dimen/mpu_content_padding_small"
                    android:paddingLeft="@dimen/mpu_content_padding"
                    android:paddingRight="@dimen/mpu_content_padding"
                    android:paddingTop="@dimen/mpu_content_padding_small">

                    <LinearLayout android:layout_width="match_parent"
                                  android:layout_height="wrap_content"
                                  android:orientation="horizontal">
                        <TextView
                            android:id="@+id/mpu_summary_status_view"
                            style="@style/MpuCardHeaderTextStyle"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="1"
                            tools:text="Approved"/>

                        <TextView
                            android:id="@+id/mpu_summary_amount_view"
                            style="@style/MpuCardHeaderAmountTextStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            tools:text="$12.34"/>

                    </LinearLayout>

                    <TextView
                        android:id="@+id/mpu_summary_status_information_view"
                        style="@style/MpuCardHeaderInformationStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:visibility="gone"
                        tools:text="Extra information"
                        tools:visibility="visible"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/mpu_summary_tx_history_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone">
                </LinearLayout>

                <View
                    android:id="@+id/mpu_summary_divider_header_view"
                    android:layout_width="fill_parent"
                    android:layout_height="@dimen/mpu_divider"
                    android:layout_marginLeft="@dimen/mpu_divider_padding"
                    android:layout_marginRight="@dimen/mpu_divider_padding"
                    android:background="@color/mpu_divider"/>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/mpu_summary_scheme_view"
                        style="@style/MpuCardBodyTextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/mpu_issuer_card_icon_size"
                        android:gravity="center"
                        android:paddingBottom="@dimen/mpu_content_padding_small"
                        android:paddingLeft="@dimen/mpu_card_image_padding"
                        android:paddingRight="@dimen/mpu_card_image_padding"
                        android:paddingTop="@dimen/mpu_content_padding_small"
                        tools:drawableLeft="@drawable/mpu_visacard_image"
                        tools:text="Unknown"/>

                    <TextView
                        android:id="@+id/mpu_summary_account_number_view"
                        style="@style/MpuAccountNoTextStyle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingBottom="@dimen/mpu_content_padding_small"
                        android:paddingLeft="@dimen/mpu_content_padding"
                        android:paddingRight="@dimen/mpu_content_padding"
                        android:paddingTop="@dimen/mpu_content_padding_small"
                        tools:text="XXXX XXXX XXXX 1234"/>
                </LinearLayout>


                <View
                    android:id="@+id/mpu_summary_divider_scheme_accno_view"
                    android:layout_width="fill_parent"
                    android:layout_height="@dimen/mpu_divider"
                    android:layout_marginLeft="@dimen/mpu_divider_padding"
                    android:layout_marginRight="@dimen/mpu_divider_padding"
                    android:background="@color/mpu_divider"/>

                <TextView
                    android:id="@+id/mpu_summary_subject_view"
                    style="@style/MpuCardBodyTextStyle"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/mpu_content_padding_small"
                    android:paddingLeft="@dimen/mpu_content_padding"
                    android:paddingRight="@dimen/mpu_content_padding"
                    android:paddingTop="@dimen/mpu_content_padding_small"
                    tools:text="How much wood would a woodchuck chuck if a woodchuck could chuck wood?"/>

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="@dimen/mpu_divider"
                    android:background="@color/mpu_divider"/>

                <TextView
                    android:id="@+id/mpu_summary_datetime_view"
                    style="@style/MpuTimestampTextStyle"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingBottom="@dimen/mpu_content_padding_small"
                    android:paddingLeft="@dimen/mpu_content_padding"
                    android:paddingRight="@dimen/mpu_content_padding"
                    android:paddingTop="@dimen/mpu_content_padding_small"
                    tools:text="9:05 am / Today"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/mpu_summary_capture_button"
                style="@style/mpos.ui.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/MPUCaptureTransaction"/>

            <Button
                android:id="@+id/mpu_summary_refund_button"
                style="@style/mpos.ui.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/MPURefundTransaction"/>

            <Button
                android:id="@+id/mpu_summary_retry_button"
                style="@style/mpos.ui.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/MPURetry"/>

            <Button
                android:id="@+id/mpu_summary_send_receipt_button"
                style="@style/mpos.ui.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/MPUSendReceipt"/>

            <Button
                android:id="@+id/mpu_summary_print_receipt_button"
                style="@style/mpos.ui.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/MPUPrintReceipt"/>

            <Button
                android:id="@+id/mpu_summary_close_button"
                style="@style/mpos.ui.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/MPUClose"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>